# pokeapi-cli

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: api.rs  category.rs  main.rs
src/api/: item.rs  pokemon.rs
tests/: integration_test.rs
