[package]
name = "pokeapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.26", features = ["json"] }
rustemon = "3.4.0"
serde_json = "1.0.114"
structopt = "0.3.26"
tokio = { version = "1.36.0", features = ["full"] }
